--- a/may_weather/Layouts/Main.storyboard
+++ b/may_weather/Layouts/Main.storyboard
@@ -150,7 +150,6 @@
         <!--Navigation Controller-->
         <scene sceneID="6SH-C1-1QB">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="1OF-1M-Sju" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController id="Trc-9B-SQu" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="KWv-kG-RCk">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -160,19 +159,20 @@
                         <segue destination="y5i-67-lve" kind="relationship" relationship="rootViewController" id="lAb-al-24F"/>
                     </connections>
                 </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1OF-1M-Sju" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1164" y="103"/>
         </scene>
         <!--Split View Controller-->
         <scene sceneID="iR2-5v-wfa">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="RHF-y7-su6" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <splitViewController id="akY-cg-6HM" sceneMemberID="viewController">
                     <connections>
                         <segue destination="Trc-9B-SQu" kind="relationship" relationship="masterViewController" id="4zo-zs-2Oj"/>
                         <segue destination="DDK-kA-6ap" kind="relationship" relationship="detailViewController" id="iRK-57-R8b"/>
                     </connections>
                 </splitViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RHF-y7-su6" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-2090" y="103"/>
         </scene>
@@ -302,14 +302,6 @@
                                 </subviews>
                                 <color key="backgroundColor" red="0.39451104402542114" green="0.28144276142120361" blue="0.28601914644241333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Grzegorz Bogdan" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tPU-o5-0OP">
-                                <rect key="frame" x="0.0" y="22" width="375" height="27"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.53770786520000002" green="0.65036922689999999" blue="0.56846648450000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="22"/>
-                                <color key="textColor" red="0.85790485143661499" green="0.88876181840896606" blue="0.86260908842086792" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Mca-ER-nPi">
                                 <rect key="frame" x="0.0" y="413" width="375" height="105"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -394,11 +386,44 @@
                         <outlet property="TownLabel" destination="p83-Wr-dcy" id="1Kb-B3-Aim"/>
                         <outlet property="WindDirLabel" destination="I7g-Oj-cHR" id="00B-85-kCy"/>
                         <outlet property="WindSpeedLabel" destination="7oP-WL-Brc" id="tVq-EQ-CYO"/>
+                        <segue destination="D9o-uk-wMe" kind="show" identifier="SegueSingleToMap" id="aQH-x4-YHy"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-415" y="874"/>
+            <point key="canvasLocation" x="-415.19999999999999" y="873.91304347826099"/>
+        </scene>
+        <!--Map View Controller-->
+        <scene sceneID="Svw-vk-jYz">
+            <objects>
+                <viewController id="D9o-uk-wMe" customClass="MapViewController" customModule="may_weather" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="3Oi-2n-0oi">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Fdc-vE-MjF">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </mapView>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="siH-ek-MgG">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="Title" id="lg1-Jg-2rb"/>
+                                </items>
+                            </navigationBar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="vFT-8B-8c6"/>
+                    </view>
+                    <connections>
+                        <outlet property="MapView" destination="Fdc-vE-MjF" id="Sh1-rL-6Ft"/>
+                        <outlet property="TitleItem" destination="lg1-Jg-2rb" id="Oqo-v3-DUv"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="G2Q-nD-HMU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="436" y="873.91304347826099"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
